bug 296121: The parser leaks when somebody calls document.open() and doesn't write any data. r+sr=bzbarsky a=shaver